# tdlib-rest

./: .gitignore  LICENSE  README.md  build-td.sh  build-tdlib-rest.sh  build_env_local.sh.template.txt
main_src/: .gitignore  CMakeLists.txt  base.cpp  base.h  http.cpp  http.h  httpd.cpp  httpd.h  httpd_worker_thread.cpp  main.cpp  program_options.cpp  program_options.h  tdjson_example.cpp.txt  tdlib_api.cpp  tdlib_api.h  util.cpp  util.h
test_src/: .gitignore  flood_test.py  local_vars.py.template.txt
